force-app/main/default/objects/sugati__Client_Payment__c/sugati__Client_Payment__c.object-meta.xml
<CustomObject>
    <label>Client Payment</label>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Client Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>