force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__Country__c</fullName>
    <formula>sugati__CP_Opportunity__r.sugati__O_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>