force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Amount__c</fullName>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>