force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Booking_Number__c</fullName>
    <formula>sugati__CP_Opportunity__r.sugati__O_Reference_Number__c</formula>
    <label>Booking Number</label>
    <type>Text</type>
</CustomField>