force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Card_Cheque_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Card_Cheque_Doc_No__c</fullName>
    <label>Card/Cheque/Doc No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>