force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Master Credit</fullName>
            </value>
            <value>
                <fullName>Master Debit</fullName>
            </value>
            <value>
                <fullName>Visa Credit</fullName>
            </value>
            <value>
                <fullName>Visa Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>