force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Client_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Client_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Client_Invoice__c.sugati__I_Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.sugati__CP_Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Client_Invoice__c</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>