force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Client_Name__c</fullName>
    <formula>TEXT(sugati__CP_Contact__r.Salutation)+&apos; &apos;+sugati__CP_Contact__r.FirstName  +&apos; &apos;+ sugati__CP_Contact__r.LastName</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>