force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Client_Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Client_Payment_Currency__c</fullName>
    <label>Client Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>