force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Client_Payment_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Client_Payment_Currency_Amount__c</fullName>
    <label>Client Payment Currency Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>