force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>