force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Credit_Card_Charge__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Credit_Card_Charge__c</fullName>
    <label>Credit Card Charge %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>