force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Credit_Card_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Credit_Card_Charges_Amount__c</fullName>
    <formula>( sugati__CP_Amount__c - sugati__CP_Receipt_AmountEx__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>