force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>sugati__Credit_Memo__c</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>