force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Currency__c</fullName>
    <formula>TEXT(sugati__CP_Opportunity__r.sugati__O_Booking_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>