force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>