force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_First_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Payment</label>
    <type>Checkbox</type>
</CustomField>