force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Is_Agency_Payee__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Is_Agency_Payee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agency Payee</label>
    <type>Checkbox</type>
</CustomField>