force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Last_4_Digits__c</fullName>
    <label>Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>