force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>