force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Opportunity_Owner__c</fullName>
    <formula>sugati__CP_Opportunity__r.Owner.Email</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>