force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Opportunity_Owner_Email__c</fullName>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>