force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Payee_Agency__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Payee_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Agency</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>