force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Payment_Method_C__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Payment_Method_C__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>Credit Card - Visa</fullName>
            </value>
            <value>
                <fullName>Credit Card - Amex</fullName>
            </value>
            <value>
                <fullName>Credit Card - Mastercard</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>