force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Payment_Notes__c</fullName>
    <label>Payment Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>