force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
                <default>true</default>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>