force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Processed_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Processed_On__c</fullName>
    <label>Processed On</label>
    <type>Date</type>
</CustomField>