force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Quote_Number__c</fullName>
    <formula>sugati__CP_Opportunity__r.sugati__O_Quote_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>