force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Receipt_AmountEx__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Receipt_AmountEx__c</fullName>
    <label>Receipt Amount (excl Credit Charge)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>