force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_ReceiptDate_To_Today__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_ReceiptDate_To_Today__c</fullName>
    <formula>TODAY()-sugati__CP_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReceiptDate To Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>