force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Sec_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Sec_Number__c</fullName>
    <label>Sec. Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>