force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Split_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Split_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be true when payment was split between client groups.</inlineHelpText>
    <label>Split Payment?</label>
    <type>Checkbox</type>
</CustomField>