force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Total_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Total_Selling_Price__c</fullName>
    <description>The Total Selling price at the point of client payment record.</description>
    <label>Total Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>