force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Transaction_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Transaction_Notes__c</fullName>
    <label>Transaction Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>