force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>