force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__CP_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Type__c</fullName>
    <inlineHelpText>Payment Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SagePay</fullName>
            </value>
            <value>
                <fullName>PDQ</fullName>
            </value>
            <value>
                <fullName>EcommPay</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>EcommPay-Ext</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Trust-Ext</fullName>
            </value>
            <value>
                <fullName>Flywire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>