force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Client_Group_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Client_Group_Booking_Status__c</fullName>
    <label>Client Group Booking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>