force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Contact_Payment_Detail__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Contact_Payment_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Payment Detail</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contact Payment Detail record must belong to the same contact making the payment.</errorMessage>
        <filterItems>
            <field>$Source.sugati__CP_Contact__c</field>
            <operation>equals</operation>
            <valueField>sugati__Contact_Payment_Detail__c.sugati__S_CPD_Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Contact_Payment_Detail__c</referenceTo>
    <relationshipLabel>Client Payments</relationshipLabel>
    <relationshipName>Client_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>