force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>