force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Refund_Parent__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Refund_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund Parent</label>
    <referenceTo>sugati__Client_Payment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>