force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Show_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Show_on_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show on Invoice</label>
    <type>Checkbox</type>
</CustomField>