force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Total_Payment_in_Tour_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Total_Payment_in_Tour_Currency__c</fullName>
    <label>Total Payment in Tour Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>