force-app/main/default/objects/sugati__Client_Payment__c/fields/sugati__S_CP_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CP_Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>