force-app/main/default/objects/sugati__Client_Payment__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>